# slate

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LISTS.md  README.md  TODO.md  WIDE_COLUMN_DESIGN.md  docker-compose.yml  plan.md  test-resources.yaml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  benchmarks.md  kubernetes.md  querying.md  roadmap.md  swift.md
crates/slate-api/: Cargo.toml
crates/slate-api/src/: error.rs  main.rs  state.rs
crates/slate-api/src/routes/: datasources.rs  health.rs  mod.rs
crates/slate-bench/: Cargo.toml
crates/slate-bench/src/: alloc.rs  datagen.rs  main.rs  raw_document_bench.rs  report.rs  scenarios.rs  tcp_scenarios.rs
crates/slate-client/: Cargo.toml
crates/slate-client/src/: client.rs  lib.rs  pool.rs
crates/slate-collection/: Cargo.toml
crates/slate-collection-http/: Cargo.toml
crates/slate-collection-http/src/: main.rs
crates/slate-collection-http/tests/: integration.rs
crates/slate-collection/src/: error.rs  http.rs  lib.rs  request.rs
crates/slate-collection/tests/: http.rs
crates/slate-db/: Cargo.toml  improvements.md
crates/slate-db/benches/: executor.rs  mutation.rs  planner.rs  query.rs
crates/slate-db/benches/common/: mod.rs
crates/slate-db/examples/: basic.rs  triggers.rs  validators.rs
crates/slate-db/src/: catalog.rs  cell.rs  collection.rs  convert.rs  cursor.rs  database.rs  datasource.rs  encoding.rs  engine.rs  error.rs  exec.rs  executor.rs  hooks.rs  lib.rs  parse_filter.rs  planner.rs  record.rs  result.rs  sweep.rs  tests.rs
crates/slate-db/src/executor/: context.rs  exec.rs  field_tree.rs  mod.rs  mutation_ops.rs  raw_bson.rs  raw_mutation.rs  tests.rs
crates/slate-db/src/executor/nodes/: delete.rs  delete_index.rs  distinct.rs  filter.rs  index_merge.rs  index_scan.rs  insert_index.rs  insert_record.rs  limit.rs  mod.rs  mutate.rs  projection.rs  read_record.rs  replace.rs  scan.rs  sort.rs  trigger.rs  update.rs  upsert.rs  validate.rs  values.rs
crates/slate-db/src/executor/tests/: mod.rs  mutation.rs  range_scan.rs  read_path.rs  store.rs  upsert.rs
crates/slate-db/src/executor_v2/: field_tree.rs  mod.rs
crates/slate-db/src/executor_v2/nodes/: delete.rs  delete_index.rs  distinct.rs  filter.rs  index_merge.rs  index_scan.rs  insert_index.rs  limit.rs  mod.rs  projection.rs  replace.rs  scan.rs  sort.rs  values.rs
crates/slate-db/src/expression/: eval.rs  mod.rs
crates/slate-db/src/mutation/: mod.rs  raw.rs
crates/slate-db/src/parser/: mod.rs
crates/slate-db/src/planner/: mod.rs  plan.rs  plan_node.rs  planner.rs  statement.rs  tests.rs
crates/slate-db/src/planner_v2/: expression.rs  parse_filter.rs
crates/slate-db/src/runtime/: mod.rs
crates/slate-db/src/statement/: mod.rs
crates/slate-db/tests/: collection.rs  count.rs  database.rs  delete.rs  distinct.rs  find.rs  id_types.rs  index.rs  insert.rs  merge.rs  mutation.rs  replace.rs  ttl.rs  update.rs  vm.rs
crates/slate-db/tests/common/: mod.rs
crates/slate-engine/: Cargo.toml
crates/slate-engine/benches/: engine.rs
crates/slate-engine/src/: error.rs  index_diff.rs  index_sync.rs  key.rs  kv.rs  lib.rs  traits.rs  validate.rs
crates/slate-engine/src/encoding/: bson_value.rs  index_record.rs  key.rs  mod.rs  record.rs
crates/slate-engine/src/index/: mod.rs
crates/slate-engine/src/kv/: catalog.rs  mod.rs  transaction.rs
crates/slate-engine/tests/: index_integrity.rs  kv.rs
crates/slate-lists/: Cargo.toml
crates/slate-lists-knative/: Cargo.toml
crates/slate-lists-knative/src/: main.rs
crates/slate-lists-knative/tests/: integration.rs
crates/slate-lists/src/: config.rs  error.rs  http.rs  lib.rs  loader.rs  request.rs  service.rs
crates/slate-lists/tests/: http.rs  loader.rs  service.rs
crates/slate-loader-fake/: Cargo.toml
crates/slate-loader-fake/src/: lib.rs  main.rs
crates/slate-operator/: Cargo.toml  TESTING.md  deploy.yaml  test-resources.yaml
crates/slate-operator/src/: crd.rs  main.rs
crates/slate-operator/src/reconcile/: collection.rs  list.rs  mod.rs  server.rs
crates/slate-query/: Cargo.toml
crates/slate-query/src/: expression.rs  filter.rs  lib.rs  mutation.rs  operator.rs  parse_filter.rs  query.rs  sort.rs  value.rs
crates/slate-serde-bench/: Cargo.toml
crates/slate-serde-bench/src/: main.rs
crates/slate-server/: Cargo.toml
crates/slate-server-init/: Cargo.toml
crates/slate-server-init/src/: main.rs
crates/slate-server/src/: lib.rs  main.rs  protocol.rs  server.rs  session.rs
crates/slate-server/tests/: integration.rs
crates/slate-store/: Cargo.toml  improvements.md
crates/slate-store-bench/: Cargo.toml
crates/slate-store-bench/src/: main.rs
crates/slate-store/benches/: memory.rs  redb.rs  rocks.rs
crates/slate-store/benches/common/: mod.rs
crates/slate-store/src/: error.rs  lib.rs  record.rs  store.rs
crates/slate-store/src/memory/: mod.rs  store.rs  transaction.rs
crates/slate-store/src/redb_store/: mod.rs  store.rs  transaction.rs
crates/slate-store/src/rocks/: mod.rs  store.rs  transaction.rs
crates/slate-store/tests/: memory_store.rs  redb_store.rs  rocks_store.rs
crates/slate-uniffi/: Cargo.toml
crates/slate-uniffi/src/: db.rs  error.rs  lib.rs
crates/slate-vm/: Cargo.toml
crates/slate-vm/benches/: vm.rs
crates/slate-vm/src/: convert.rs  error.rs  lib.rs  lua_vm.rs  sandbox.rs
crates/slate-vm/src/js/: bridge.rs  mod.rs  runtime.rs
crates/slate-vm/src/lua/: convert.rs  error.rs  mod.rs  runtime.rs  sandbox.rs  vm.rs
crates/slate-vm/src/pool/: mod.rs
crates/slate-wasm/: Cargo.toml
crates/slate-wasm/src/: lib.rs
crates/slate-wasm/tests/: integration.rs
dev/: Dockerfile  collections.json  docker-compose.yml  list.json  seed.json
