[package]
name = "slate-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "slate-api"
path = "src/main.rs"

[dependencies]
slate-client = { path = "../slate-client" }
slate-db = { path = "../slate-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
