[package]
name = "slate-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store", features = ["rocksdb", "memory"] }
slate-query = { path = "../slate-query" }
slate-server = { path = "../slate-server" }
slate-client = { path = "../slate-client" }
rand = "0.8"
tempfile = "3"
