[package]
name = "slate-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "slate-bench"
path = "src/main.rs"

[[bin]]
name = "raw-document-bench"
path = "src/raw_document_bench.rs"

[dependencies]
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store", features = ["memory", "redb"] }
slate-query = { path = "../slate-query" }
bson = "2"
rand = "0.8"
tempfile = "3"
