[package]
name = "slate-client"
version = "0.1.0"
edition = "2024"

[dependencies]
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store" }
slate-query = { path = "../slate-query" }
slate-server = { path = "../slate-server" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
crossbeam = "0.8"
