[package]
name = "slate-collection"
version = "0.1.0"
edition = "2024"

[dependencies]
slate-client = { path = "../slate-client" }
slate-query = { path = "../slate-query" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = "2"
http = "1"

[dev-dependencies]
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store", features = ["memory"] }
slate-server = { path = "../slate-server" }
bson = "2"
http = "1"
serde_json = "1"
