[package]
name = "slate-db"
version = "0.1.0"
edition = "2024"

[features]
bench-internals = []

[dependencies]
slate-engine = { path = "../slate-engine" }
slate-store = { path = "../slate-store", default-features = false }
slate-query = { path = "../slate-query" }
serde = { version = "1", features = ["derive"] }
bson = { workspace = true }
regex = "1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"
slate-store = { path = "../slate-store", features = ["memory"] }

[[bench]]
name = "executor"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "planner"
harness = false
required-features = ["bench-internals"]
