[package]
name = "slate-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { workspace = true }
slate-store = { path = "../slate-store", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
slate-store = { path = "../slate-store", features = ["memory"] }

[[bench]]
name = "engine"
harness = false
