[package]
name = "slate-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
futures = "0.3"
serde_yaml = "0.9"
slate-client = { path = "../slate-client" }
slate-db = { path = "../slate-db" }
