[package]
name = "slate-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "slate-server"
path = "src/main.rs"

[dependencies]
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store", features = ["memory"] }
slate-query = { path = "../slate-query" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
bson = "2"

[dev-dependencies]
tempfile = "3"
bson = "2"
slate-client = { path = "../slate-client" }
