[package]
name = "slate-store"
version = "0.1.0"
edition = "2024"

[features]
default = ["memory"]
rocksdb = ["dep:rocksdb"]
memory = ["dep:imbl", "dep:arc-swap"]
redb = ["dep:redb"]

[dependencies]
rocksdb = { version = "0.24", optional = true }
imbl = { version = "4", optional = true }
arc-swap = { version = "1", optional = true }
redb = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "memory"
harness = false
required-features = ["memory"]

[[bench]]
name = "rocks"
harness = false
required-features = ["rocksdb"]

[[bench]]
name = "redb"
harness = false
required-features = ["redb"]
