[package]
name = "slate-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["memory"]
memory = ["slate-store/memory"]
redb = ["slate-store/redb"]
rocksdb = ["slate-store/rocksdb"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
slate-db = { path = "../slate-db" }
slate-store = { path = "../slate-store", default-features = false }
slate-query = { path = "../slate-query" }
serde_json = "1"
bson = "2"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
