[package]
name = "slate-vm"
version = "0.1.0"
edition = "2024"

[features]
lua = ["dep:mlua"]
wasm = []
js = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
bson = { workspace = true }
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm"
harness = false
required-features = ["lua"]
