[package]
name = "slate-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slate-db = { path = "../slate-db", default-features = false }
slate-store = { path = "../slate-store", default-features = false, features = ["memory"] }
slate-query = { path = "../slate-query" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
bson = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
